# diagramy

./: .gitignore  Cargo.toml  GRAMMAR.txt  Makefile  README.md  a.dgmy  arrows.dgmy  demo.dgmy  deploy-diagramy.sh  dia.vim  e21.dgmy  example.dgmy  example2.dgmy  jellyfish.augment.dgmy  jellyfish.dgmy  main.dgmy  open_assets.sh  swatch.html  test.dgmy  test_label.dgmy  test_port.dgmy  test_route.dgmy  test_text_validation.dgmy
diffs/: alignment.patch  font_sizes.patch  uniform_scaling.patch
examples/: 01_simple_grid.dgmy  02_auto_positioning.dgmy  03_dimensions.dgmy  03_labels.dgmy  04_dimensions.dgmy  04_nested_boxes.dgmy  05_nested_boxes.dgmy  05_reusable_definitions.dgmy  06_multiline_text.dgmy  06_reusable_definitions.dgmy  07_border_styles.dgmy  07_multiline_text.dgmy  08_border_styles.dgmy  08_color_palette.dgmy  09_color_palette.dgmy  09_system_architecture.dgmy  10_network_topology.dgmy  10_system_architecture.dgmy  11_mixed_features.dgmy  11_network_topology.dgmy  12_microservice_architecture.dgmy  12_mixed_features.dgmy  13_microservice_architecture.dgmy  14_bold_text.dgmy  14_ports_and_arrows.dgmy  15_circuit_block_diagram.dgmy  15_ports_and_arrows.dgmy  16_circuit_block_diagram.dgmy  17_autopos_ports.dgmy  18_bus.dgmy  example.dia  main.dgmy  main.dia  print_scaling.rs  reference.dia  simple.dgmy  test.dia  test_all_comments.dia  test_comments.dia  test_nested_stacked.dia  (+3 more)
src/: ast.rs  color.rs  diagram.rs  elaboration.rs  grammar.lalrpop  graphviz.rs  lib.rs  lsp.rs  main.rs  rect.rs  routing.rs  svg.rs  tests.rs  validation.rs
web/: build-examples.sh  (+5 more)
(+14 files in other folders)
