[package]
name = "diagramy"
version = "0.1.0"
edition = "2021"
default-run = "dgmy"

[[bin]]
name = "dgmy"
path = "src/main.rs"

[[bin]]
name = "dgmy-lsp"
path = "src/lsp.rs"
required-features = ["lsp"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
lsp = ["tokio", "tower-lsp"]

[build-dependencies]
lalrpop = "0.20"

[dependencies]
clap = { version = "=4.5.20", features = ["derive"] }
lalrpop-util = { version = "0.20", features = ["lexer"] }
regex = "1"
svg = "0.18"
tokio = { version = "1.50.0", features = ["full"], optional = true }
tower-lsp = { version = "0.20.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
